--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page - Crypto Web</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./static/css/styles.css">
 </head>
 
 <body>
@@ -14,13 +14,13 @@
         <nav>
             <img src="./static/images/logo.png" class="logo">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="#">All Crypto</a></li>
                 <li><a href="#">Search</a></li>
                 <li><a href="#">Create Offer</a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </nav>
     </header>
