--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page - Crypto Web</title>
-    <link rel="stylesheet" href="./static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 
 <body>
     <header class="header">
         <nav>
-            <img src="./static/images/logo.png" class="logo">
+            <img src="/static/images/logo.png" class="logo">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/all">All Crypto</a></li>
+                <li><a href="/catalog">All Crypto</a></li>
                 {{#if isAuthenticated}}
                 <li><a href="/search">Search</a></li>
                 <li><a href="/create">Create Offer</a></li>
