searched results and error handling

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -29,9 +29,9 @@
     </header>
             {{#if errors}}
          <div>
-            {{#each error}}
             <div class="errorContainer">
-                <p>{{this}}</p>
+            {{#each errors}}
+               <p> {{this}} </p>
             {{/each}}
             </div>
         </div>
